Fix spacing

--- a/client-web/src/Welcome.scss
+++ b/client-web/src/Welcome.scss
@@ -26,7 +26,7 @@
     display: block;
     margin: 0;
 
-    @media (max-width: 25.3125rem) {
+    @media (max-width: 25.625rem) {
       display: grid;
       grid-template-rows: 1fr 1fr;
     }
